--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "@mantine/hooks": "^5.0.2",
     "@mantine/next": "^5.0.2",
     "@tabler/icons": "^1.78.1",
+    "near-api-js": "^0.45.1",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "18.6.2",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/uuid": "^8.3.4",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
     "eslint-config-prettier": "^8.5.0",
