--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@emotion/react": "^11.9.3",
     "@emotion/server": "^11.4.0",
     "@mantine/core": "^5.0.2",
+    "@mantine/form": "^5.0.2",
     "@mantine/hooks": "^5.0.2",
     "@mantine/next": "^5.0.2",
+    "@mantine/notifications": "^5.0.2",
     "@tabler/icons": "^1.78.1",
+    "@tanstack/react-query": "^4.0.10",
+    "@tanstack/react-query-devtools": "^4.0.10",
     "near-api-js": "^0.45.1",
     "next": "12.2.3",
     "react": "18.2.0",
